<resources>
    <string name="app_name">Movies review</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="check">Check</string>
    <string name="testColor1">Test Color 1</string>
    <string name="testColor2">Test Color 2</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="movie_name">Movie Name</string>
    <string name="review">Review</string>
    <string name="score">Score</string>
    <string name="cancel">Cancel</string>
    <string name="messageError">The name cannot be empty</string>
    <string name="about">About</string>
    <string name="preferences">Preferences</string>
    <string name="background">Background</string>
    <string name="day_mode">Day Mode</string>
    <string name="night_mode">Night Mode</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="portuguese">Portuguese</string>
    <string name="edit_movie_review">Edit Movie Review</string>
    <string name="new_movie_review">New Movie Review</string>
    <string name="about_text">This app was developed by Henrique Perfoll Neto, student of the course in Java Specialization. This app is the final project for the android development class.</string>
    <string name="about_movies_review">About Movies Review</string>
    <string name="alert_title">Alert!</string>
    <string name="ok">Ok</string>
    <string name="alert_message">Do you really want to proceed?</string>
</resources>
