<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemSalvar"
        android:title="@string/save" />
    <item
        android:id="@+id/menuItemExcluir"
        android:title="@string/delete" />
    <item
        android:id="@+id/menuItemCheck"
        android:checkable="true"
        android:onClick="exemploAcaoMenuItem"
        android:title="@string/check" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuItemTestColor"
            android:title="@string/testColor1" />
        <item
            android:id="@+id/menuItemTestColor2"
            android:title="@string/testColor2" />
    </group>
</menu>